feat:更新用户创建接口文档，增加对角色字段的说明及冲突处理 fix:修复air热重载docs生成死循环问题
